--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,24 @@
+--prefer-binary
 # Environment variables
 python-dotenv
 
 # Web framework
-Flask
+Flask=3.1.0
 
 # NLP and text processing
-spacy
-nltk
-pyresparser
+spacy=3.8.4
+nltk=3.1.0
+pyresparser=1.0.6
 
 # Database
-pymupdf
+pymupdf=1.25.5
 
 # External APIs / tools
-groq
-requests  # if you make HTTP requests
+groq=0.22.0
+requests=2.32.3  # if you make HTTP requests
 
 # Large English spaCy model
-https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl
+https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
+
 
 
