--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
 --prefer-binary
 # Environment variables
-python-dotenv
+python-dotenv==1.1.1
 
 # Web framework
-Flask=3.1.0
+Flask==3.1.0
 
 # NLP and text processing
-spacy=3.8.4
-nltk=3.1.0
-pyresparser=1.0.6
+spacy==3.8.4
+nltk==3.1.0
+pyresparser==1.0.6
 
 # Database
-pymupdf=1.25.5
+pymupdf==1.25.5
 
 # External APIs / tools
-groq=0.22.0
-requests=2.32.3  # if you make HTTP requests
+groq==0.22.0
+requests==2.32.3  # if you make HTTP requests
 
 # Large English spaCy model
 https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
+
 
 
 
