--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask==3.1.0
 
 # NLP and text processing 
 spacy==3.8.4 
-nltk==3.1.0 
+nltk>=3.4.3
 pyresparser==1.0.6 
 
 # Database 
@@ -19,3 +19,4 @@ requests==2.32.3
 
 # Large English spaCy model 
 https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
+
