--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ pymupdf==1.25.5
 # External APIs / tools 
 groq==0.22.0 
 requests==2.32.3 
+json5==0.12.1
 
 # Large English spaCy model 
 https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
+
 
