--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ requests==2.32.3
 json5==0.12.1
 
 # Large English spaCy model 
-https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
+#https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl
 
+# Small English spaCy model (lightweight)
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 
