--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ nltk>=3.4.3
 pyresparser==1.0.6 
 
 # Database 
+psycopg2-binary==2.9.9
 pymupdf==1.25.5 
 
 # External APIs / tools 
@@ -23,4 +24,5 @@ json5==0.12.1
 
 # Small English spaCy model (lightweight)
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+
 
